--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -13,7 +13,9 @@
 .header__container {
     max-width: var(--max-width);
     margin: 0 auto;
-    padding: 16px 32px;
+    padding: 0 32px;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
